Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_nev-britedge-app.yml
+++ b/.github/workflows/main_nev-britedge-app.yml
@@ -45,17 +45,27 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    
+    permissions:
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: python-app
       
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_F0697569F78B4F15967502B8A6EF2596 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B6D6EE4AD4134588A56046B3DF370169 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_BDC66CEC4CA04501A58E56E7B5FFDB0E }}
+
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'nev-BritEdge-app'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6CB3ED95E7E34DA2AB2AE3C1E60FB0B7 }}
+          
